[gd_scene load_steps=21 format=3 uid="uid://cga5unbba7lna"]

[ext_resource type="Script" path="res://player/player.gd" id="1_nkgg8"]
[ext_resource type="Texture2D" uid="uid://66c64l3lvjvw" path="res://addons/Tiny Swords/Factions/Knights/Troops/Warrior/Blue/Warrior_Blue.png" id="1_p27sd"]
[ext_resource type="PackedScene" uid="uid://cabsu5l7w0uto" path="res://misc/jogadorSkull.tscn" id="2_ddijw"]
[ext_resource type="PackedScene" uid="uid://nnthv86jov4t" path="res://misc/ritual.tscn" id="2_uknh3"]
[ext_resource type="FontFile" uid="uid://bdqgih5qcohjo" path="res://addons/Kenny Font/Kenney High.ttf" id="5_m52o6"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dykfu"]
radius = 17.0
height = 44.0

[sub_resource type="Animation" id="Animation_mfsg7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_jvf85"]
resource_name = "attackDownOne"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4), Vector2i(4, 4), Vector2i(5, 4)]
}

[sub_resource type="Animation" id="Animation_no05s"]
resource_name = "attackDownTwo"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 5), Vector2i(1, 5), Vector2i(2, 5), Vector2i(3, 5), Vector2i(4, 5), Vector2i(5, 5)]
}

[sub_resource type="Animation" id="Animation_lpo8j"]
resource_name = "attackOne"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"danoNoInimigo"
}]
}

[sub_resource type="Animation" id="Animation_xnc1f"]
resource_name = "attackTwo"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3), Vector2i(4, 3), Vector2i(5, 3)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"danoNoInimigo"
}]
}

[sub_resource type="Animation" id="Animation_5p0kj"]
resource_name = "attackUpOne"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 6), Vector2i(1, 6), Vector2i(2, 6), Vector2i(3, 6), Vector2i(4, 6), Vector2i(5, 6)]
}

[sub_resource type="Animation" id="Animation_2nwtv"]
resource_name = "attackUpTwo"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 7), Vector2i(1, 7), Vector2i(2, 7), Vector2i(3, 7), Vector2i(4, 7), Vector2i(5, 7)]
}

[sub_resource type="Animation" id="Animation_ftavo"]
resource_name = "idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0)]
}

[sub_resource type="Animation" id="Animation_ft1x3"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6ared"]
_data = {
"RESET": SubResource("Animation_mfsg7"),
"attackDownOne": SubResource("Animation_jvf85"),
"attackDownTwo": SubResource("Animation_no05s"),
"attackOne": SubResource("Animation_lpo8j"),
"attackTwo": SubResource("Animation_xnc1f"),
"attackUpOne": SubResource("Animation_5p0kj"),
"attackUpTwo": SubResource("Animation_2nwtv"),
"idle": SubResource("Animation_ftavo"),
"walk": SubResource("Animation_ft1x3")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_57sx8"]
radius = 131.0

[sub_resource type="CircleShape2D" id="CircleShape2D_p2ubs"]
radius = 43.0116

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vey7x"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1plu8"]
bg_color = Color(1, 0.36, 0.370667, 1)

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_nkgg8")
danoRitual = 2
intervaloRitual = 15.0
cenaRitual = ExtResource("2_uknh3")
templeteMorte = ExtResource("2_ddijw")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -28)
texture = ExtResource("1_p27sd")
hframes = 6
vframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -13)
shape = SubResource("CapsuleShape2D_dykfu")
debug_color = Color(0, 0.6, 0.701961, 0.180392)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6ared")
}
autoplay = "idle"

[node name="AreaEspada" type="Area2D" parent="."]
position = Vector2(1, -30)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaEspada"]
position = Vector2(1, 0)
shape = SubResource("CircleShape2D_57sx8")
debug_color = Color(0.943011, 0.0809874, 0.572794, 0)

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, -29)
shape = SubResource("CircleShape2D_p2ubs")
debug_color = Color(0.713726, 0.470588, 0.32549, 0.215686)

[node name="VidaProgressBar" type="ProgressBar" parent="."]
offset_left = -36.0
offset_top = 16.0
offset_right = 36.0
offset_bottom = 26.0
theme_override_fonts/font = ExtResource("5_m52o6")
theme_override_font_sizes/font_size = 16
theme_override_styles/background = SubResource("StyleBoxFlat_vey7x")
theme_override_styles/fill = SubResource("StyleBoxFlat_1plu8")
show_percentage = false
